--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Mykyta Doroshenko",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "@fancyapps/ui": "^4.0.31",
     "browser-sync": "^2.27.10",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
