--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-image": "^6.3.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-nunjucks-render": "^2.2.3",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "ion-rangeslider": "^2.3.1",
